--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="data_validade" class="form-label">Data de Validade</label>
-                        <input type="month" id="data_validade" name="data_validade" class="form-control" required>
+                        <input type="date" id="data_validade" name="data_validade" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="cvv" class="form-label">CVV</label>
